# Fetch-ROS-Docker

./: .gitignore  README.md  attach.sh  moveit.sh  push.sh  roscore.sh  run.sh
Docker/: Dockerfile  build.sh  entrypoint.sh  roscore.sh  run.sh
applications/: package.xml
applications/launch/: build_map.launch  nav_rviz.launch  pick_place.launch  playground.launch
applications/scripts/: arm_demo.py  arm_obstacle_demo.py  cart_arm_demo.py  check_cart_pose.py  head_demo.py  interactive_marker_demo.py  joint_reader_demo.py  marker_path_demo.py  marker_text_demo.py  pick_place.py  torso_demo.py  transformation_demo.py
applications/worlds/: playground.sdf
fetch_api/: package.xml
fetch_api/src/fetch_api/: __init__.py  arm.py  arm_joints.py  base.py  gripper.py  head.py  moveit_goal_builder.py  nav_path.py  torso.py
joint_state_reader/: setup.py
joint_state_reader/src/joint_state_reader/: reader.py
map_annotator/: CMakeLists.txt  package.xml  setup.py
map_annotator/src/map_annotator/: annotator.py  map_annotated.p
maps/: playground.pgm  playground.yaml
rviz/: arm_obstacle_avoidance.rviz  default.rviz  interactive_marker.rviz  marker.rviz  navigation.rviz  updated_navigation.rviz
