<?xml version="1.0"?>
<package format="2">
  <name>applications</name>
  <version>0.1.0</version>
  <description>Applications</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>joint_state_reader</depend>
  <export>
  </export>
</package>
